# unillm-backend

./: .gitignore  .pre-commit-config.yaml  .project_root  .vercelignore  README.md  config.py  constants.py  docker-compose.yml  dockerfile  main.py  package-lock.json  pyproject.toml  railway.json  railway.toml  requirements.txt  vercel.json
app/utils/: google_drive_utils.py  router.py  storage_utils.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/.vercel/output/functions/fn.func/: .vc-config.json
frontend/.vercel/output/static/_app/: version.json
frontend/.vercel/output/static/_app/immutable/assets/: 0.C23Zx6M3.css  _layout.c2lzufKp.css
frontend/.vercel/output/static/_app/immutable/chunks/: entry.DrgH2dFs.js  index.6MPx1hy8.js  index.CAoR4ltU.js  scheduler.CPr24dFs.js
frontend/.vercel/output/static/_app/immutable/entry/: app.C7Yd2tRp.js  start.CnCYF54D.js
frontend/prisma/: dev.db  schema.prisma
frontend/prisma/migrations/20241218130232_init/: migration.sql
frontend/src/lib/: constants.ts
frontend/src/lib/api/: chat.ts
frontend/src/lib/components/: ChatHistory.svelte  ChatMessage.svelte
frontend/src/lib/stores/: chat-history.ts  chat-messages.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/api/chat/: +server.ts
frontend/src/routes/api/chats/: +server.ts
frontend/src/routes/api/chats/[id]/: +server.ts
notebooks/: scraping_cleaning_pipeline.ipynb
qdrant_storage/: raft_state.json
scripts/: data_preparation.py  handbook_germany_crawler.py  study_in_germany_crawler.py
(+4 files in other folders)
